[gd_scene load_steps=5 format=3 uid="uid://cfo7k88vc51j5"]

[ext_resource type="Script" uid="uid://bu085o6oktm2n" path="res://label/flag_label.gd" id="1_djc48"]
[ext_resource type="PackedScene" uid="uid://cvaht2opsulhx" path="res://button/confirm_button.tscn" id="2_65qta"]
[ext_resource type="PackedScene" uid="uid://of28hvkda3ri" path="res://button/cancel_button.tscn" id="3_x5cr7"]
[ext_resource type="PackedScene" uid="uid://dgubn0nnkt3el" path="res://button/edit_button.tscn" id="4_o31ma"]

[node name="FlagLabel" type="Label"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Flag"
script = ExtResource("1_djc48")

[node name="EditButton" parent="." instance=ExtResource("4_o31ma")]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 0

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Flag"
placeholder_text = "Flag Name"

[node name="ConfirmButton" parent="LineEdit" instance=ExtResource("2_65qta")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_top = -16.0
offset_right = -32.0
offset_bottom = 16.0
grow_horizontal = 0

[node name="CancelButton" parent="LineEdit" instance=ExtResource("3_x5cr7")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="focus_exited" from="LineEdit" to="." method="_on_text_focus_exited"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_text_gui_input"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_text_submitted"]
[connection signal="pressed" from="LineEdit/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="LineEdit/CancelButton" to="." method="_on_cancel_button_pressed"]
